Revision history for Perl extension FCGI-Engine

0.12
    + Plack::Server::FCGI::Engine
    + Plack::Server::FCGI::Engine::ProcManager
      - subclasses to make it easier to use the
        FCGI::Engine::ProcManager with your Plack
        based application
        - added tests for this

    * FCGI::Engine::Manager::Server::Plackup
      - this now uses Plack::Server::FCGI::Engine
        by default (can be overriden with the
        'server_type' option)

0.11 Thurs. Dec. 10, 2009
    + FCGI::Engine::Manager::Server::Plackup
      - added support for running Plack based apps
        using the FCGI::Engine::Manager controls
        - added tests for this
      - NOTE: we do not depend on Plack, you are
        expected to have it installed if you use
        this module.

    * FCGI::Engine
      - adding some more PATH_INFO and SCRIPT_NAME
        fixes found in Catalyst::Engine::FastCGI
        and Plack::Server::FCGI

0.10 Fri. Aug. 7, 2009
    * FCGI::Engine::Manager
      - fixing broken call to remove pid object
        in start (when a pid file exists but the
        server is not running)

0.09 Sat. July 18, 2009
    * FCGI::Engine::Manager
      - fixing broken call to remove pid object
        in graceful restart (arcanez)

0.08 Sun. Mar. 8, 2009
    * FCGI::Engine::Types
      - fixing this to work with the latest Moose
        as well as older Moose

    * FCGI::Engine::ProcManager
      - removed usage of MooseX::Params::Validate

0.07 Tues. Feb. 24, 2009
    - Getting rid of the Mac resource forks (steve jobs--)

0.06 Tues. Feb. 24, 2009
    - Fix so start doesn't start another set of procs (marcus)
    - Add graceful method to do a restart with start
      before killing old processes. (marcus)
    - Don't stop all servers if a server fails to start. (marcus)

0.05 Sat. July 12, 2008

    * FCGI::Engine::Manager
      - added restart feature (thanks to Brian Cassidy)
        - added tests for this