@@ -1,6 +1,16 @@
 Revision history for Perl extension FCGI-Engine
 
 0.12
+    + FCGI::Engine::PSGI
+      - run PSGI applications using FCGI::Engine
+        - added tests for this
+
+    + FCGI::Engine::Core
+      - base class for FCGI::Engine flavors
+
+    * FCGI::Engine
+      - refactored to use FCGI::Engine::Core
+
     + Plack::Server::FCGI::Engine
     + Plack::Server::FCGI::Engine::ProcManager
       - subclasses to make it easier to use the
